# AMI-FILES

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_EXCEPTIONS.md  FIXME.md  MIGRATION_GUIDE.md  README.md  REPORT-FALLBACKS.md  REQUIREMENTS.md  SETUP_CONTRACT.md  STUPID_SHIT.md  __init__.py  module_setup.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg  setup.py
backend/: __init__.py
backend/config/: __init__.py  loader.py  settings.yaml
backend/extractors/: __init__.py  base.py  docx_extractor.py  image_extractor.py  pdf_extractor.py  spreadsheet_extractor.py
backend/mcp/: __init__.py
backend/mcp/filesys/: README.md  __init__.py  fast_search.py  file_formatter.py  file_utils.py  filesys_server.py  precommit_config.json  precommit_validator.py  run_filesys.py  run_stdio.py  server.py
backend/mcp/filesys/tools/: __init__.py  definitions.py  document_handlers.py  document_tools.py  executor.py  filesystem_tools.py  git_definitions.py  git_handlers.py  git_tools.py  handlers.py  metadata_tools.py  python_tools.py  registry.py
backend/mcp/filesys/tools/facade/: document.py  filesystem.py  git.py  metadata.py  python.py
backend/mcp/filesys/utils/: __init__.py  fast_search.py  file_formatter.py  file_utils.py  metadata_config.py  path_utils.py  precommit_validator.py
backend/models/: document.py
backend/services/: gemini_client.py
gitrepo/: README.md  file1.txt
localfs/: file_utils.py  local_file_server.py  tool_definitions.py
res/: bigcode_extensions.json  file_extensions.json  text_extensions.json  text_extensions_minimal.json
scripts/: ami_path.py  convert_extensions.py  env  run_filesys.py  run_filesys_fastmcp.py  run_mcp_server.py  run_tests.py  start_mcp_server.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_facades_e2e.py  test_fast_search_integration.py  test_file_tools.py  test_filesys_fastmcp_server.py  test_filesys_mcp_integration.py  test_git_tools_integration.py  test_mcp_server.py  test_python_tools.py
tests/unit/: __init__.py  test_fast_search.py  test_filesys_mcp_server.py  test_filesystem_tools.py  test_git_tools.py  test_path_validation.py  test_precommit_extensions.py  test_precommit_validator.py
