[project]
name = "ami-files"
version = "0.1.0"
description = "Files module for AMI orchestrator"
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "AMI Team" } ]

dependencies = [
  # Files module specific
  "pyahocorasick==2.2.0",
  "regex==2025.9.18",
  "PyYAML==6.0.3",
  # Database connectivity
  "asyncpg==0.30.0",
  # Document processing
  "PyMuPDF==1.26.4",
  "python-docx==1.2.0",
  "openpyxl==3.1.5",
  "pandas==2.3.3",
  "Pillow==11.3.0",
  # deps for pandas/openpyxl
  "numpy==2.3.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "six==1.17.0",
  "et-xmlfile==2.0.0",
  "lxml==6.0.2",
  "charset-normalizer==3.4.3",
  # Runtime services
  "loguru==0.7.3",
  "aiohttp==3.12.15",
  "mcp==1.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
  "pytest-mock==3.15.1",
  "faker==37.8.0",
  "ruff==0.13.2",
  "pre-commit==4.3.0",
  "mypy==1.18.2",
  "types-PyYAML==6.0.12.20250915",
  "uv==0.9.0",
]

[project.scripts]
run-filesys = "files.scripts.run_filesys:main"
run-filesys-fastmcp = "files.scripts.run_filesys_fastmcp:main"
run-files-tests = "files.scripts.run_tests:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["files*"]

[tool.uv]
package = true
dev-dependencies = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
  "pytest-mock==3.15.1",
  "faker==37.8.0",
  "ruff==0.13.2",
  "pre-commit==4.3.0",
  "mypy==1.18.2",
  "types-PyYAML==6.0.12.20250915",
  "uv==0.9.0",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
